# AndroidDemo

app/: CMakeLists.txt  ReadMe.md  build.gradle  proguard-rules.pro
app/src/OpenPano/feature/: brief.cpp  brief.h  dist.cpp  dist.h  dog.cpp  dog.h  extrema.cpp  extrema.h  feature.cpp  feature.h  gaussian.cpp  gaussian.h  matcher.cpp  matcher.h  orientation.cpp  orientation.h  sift.cpp  sift.h
app/src/OpenPano/lib/: color.cpp  color.h  config.cpp  config.h  geometry.h  imgproc.cpp  imgproc.h  mat.h  matrix.cpp  matrix.h  polygon.cpp  polygon.h  timer.cpp  timer.h  utils.cpp  utils.h
app/src/OpenPano/stitch/: blender.cpp  blender.h  camera.cpp  camera.h  camera_estimator.cpp  camera_estimator.h  cylstitcher.cpp  cylstitcher.h  homography.cpp  homography.h  imageref.cpp  imageref.h  incremental_bundle_adjuster.cpp  incremental_bundle_adjuster.h  match_info.h  multiband.cpp  multiband.h  projection.h  stitcher.cpp  stitcher.h  stitcher_image.cpp  stitcher_image.h  stitcherbase.cpp  stitcherbase.h  transform_estimate.cpp  transform_estimate.h  warp.cpp  warp.h
app/src/androidTest/java/huajun/myapplicationaa/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: imread.cpp  imread.h  imwrite.cpp  imwrite.h  log.h  native-lib.cpp
app/src/main/java/huajun/myapplicationaa/: MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/test/java/huajun/myapplicationaa/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
